# GameX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build&test.yml
src/GameBall/: CMakeLists.txt  main.cpp
src/GameBall/core/: camera_third_person.cpp  camera_third_person.h  game_ball.cpp  game_ball.h  p2pnode.cpp  p2pnode.h  packet_tool.cpp  packet_tool.h
src/GameBall/core/actors/: common_ball_actor.cpp
src/GameBall/logic/: logic.cpp  player.cpp  player.h  player_input.cpp  player_input.h  unit.cpp  unit.h  world.cpp  world.h
src/GameBall/logic/obstacles/: block.cpp  block.h
src/GameBall/logic/units/: big_ball.cpp  big_ball.h  bullet.cpp  bullet.h  regular_ball.cpp  regular_ball.h  settlement.h  units.h
src/GameX/application/: application.h
src/GameX/physics/: collision.cpp  collision.h  rigid_body.cpp  rigid_body.h  sphere.h  world.cpp  world.h
src/GameX/utils/: CMakeLists.txt  common.cpp  common.h
src/IrrKlang/: CMakeLists.txt  PlaySound.cpp  PlaySound.h
test/: regular_ball_test.cpp
